--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,16 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
-        maven { url = "https://plugins.gradle.org/m2/" }
+        maven {
+            url 'https://maven.minecraftforge.net'
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-        classpath 'com.wynprice.cursemaven:CurseMaven:2.1.1'
+        classpath 'com.anatawa12.forge:ForgeGradle:2.3-1.0.8'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: 'com.wynprice.cursemaven'
 
-version = "1.12.2-kedition-0.0.1"
+version = "1.12.2-kedition-0.0.2"
 group = "magicbees"
 archivesBaseName = "MagicBees"
 
@@ -32,7 +30,7 @@ minecraft {
 
 repositories {
     maven {
-        url "http://www.cursemaven.com"
+        url "https://cursemaven.com"
     }
 }
 
@@ -58,7 +56,7 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
 
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.minecraft.version
     }
 
     // copy everything else except the mcmod.info
